# graph_gen

./: .gitignore  .modalignore  .pre-commit-config.yaml  CLAUDE.md  Debug.ipynb  README.md  check_denoising.sh  check_denoising_files.py  check_types.sh  meetingTodos.md  mise.toml  new_denoiser.ipynb  new_experiments.tex  new_experiments.tex.bak  newer_denoiser.ipynb  pyproject.toml  pyrightconfig.json  torun.md
.zed/: settings.json
modal/: README.md  pyproject.toml
modal/scripts/: __init__.py  run_stage1.py  run_stage2.py
modal/tests/: __init__.py  test_runner.py  test_storage.py
modal/tmgg_modal/: __init__.py  app.py  image.py  paths.py  result_status.py  runner.py  storage.py  volumes.py
modal/tmgg_modal/stages/: __init__.py  stage1.py  stage2.py
tmgg/: .coverage  .gitattributes  .gitignore  .modalignore  .pre-commit-config.yaml  2026-02-18-audit-2.md  2026-02-18-digress-report.md  AUDIT_REPORT.md  CLAUDE.md  DEBUG-run-upstream-digress-sbm-modal-no-viz.zsh  DEBUG-run-upstream-digress-sbm-modal-skip-orbit.zsh  DEBUG-run-upstream-digress-sbm-modal-skip-sbm-orbit.zsh  DEBUG-run-upstream-digress-sbm-modal-skip-sbm.zsh  DEBUG-run-upstream-digress-sbm-modal.zsh  PICKUP-MMD-RATIOS-2026-05-06.md  PICKUP-PROFILING-2026-05-01.md  PICKUP2026-01-12-eigenstructure-covariance.md  PICKUP2026-01-12-missing-experiments.md  README.md  calculate_equal_params.py  digress.py.txt  distributional_audit_log.md  integration_test.py  mise.toml  mkdocs.yml  pyproject.toml  pytest.ini  run-denoising-sbm-panel-a10g.zsh  run-digress-arch-panel-modal.zsh  run-discrete-pyg-enzymes-modal-a100.zsh  run-discrete-pyg-enzymes-modal.zsh  run-discrete-sbm-vignac-repro-modal-a100.zsh  run-upstream-digress-sbm-modal-a100.zsh  run-upstream-digress-sbm-modal.zsh  runlog.md  section4_experiments.md  section4_implementation_plan.md  sync_wb  tach.toml  test_actual_config.py  (+11 more)
tmgg/.hypothesis/constants/: 06c423ddf4e249c5  1e8cbc95d998b923  45b2d8498623f39a  6b22b818c5792a02  7277c82abb8fd64c  87e9a0bf41c84572  c17aad681dd6f170  cc9643f415056be6  d2a1b6fc9a36486d  dd9af29336c24072  e4b32261f3d94583  ee53768a55e2d4b6
tmgg/2025-12-22_review/: 00_overview.md  01_architecture.md  02_config_sharing.md  03_stage_comparison.md  04_bugs_and_issues.md  05_recommendations.md
tmgg/2026-02-08-cleanup/: CHECKPOINT.md
tmgg/2026-02-08-cleanup/agent-diffs/: 01-layer1-completion-report.md  analysis-reports.md  config-modal.md  wandb-routing.md
tmgg/analysis/digress-loss-check/: BUG_REPORT.md
tmgg/checkpoints/: epoch=0-step=7.ckpt
tmgg/configs/discrete_gen/: discrete_gen_discrete_default_T100_lr1e-3_s1.json  discrete_gen_discrete_default_T100_lr1e-3_s2.json  discrete_gen_discrete_default_T100_lr1e-4_s1.json  discrete_gen_discrete_default_T100_lr1e-4_s2.json  discrete_gen_discrete_default_T500_lr1e-3_s1.json  discrete_gen_discrete_default_T500_lr1e-3_s2.json  discrete_gen_discrete_default_T500_lr1e-4_s1.json  discrete_gen_discrete_default_T500_lr1e-4_s2.json
tmgg/configs/sanity/: stage1c_digress_transformer_gnn_all_lr1e-3_wd1e-2_k16_s1.json  stage1c_digress_transformer_gnn_all_lr1e-3_wd1e-2_k16_s2.json  (+142 more)
tmgg/docs/: 2026-02-23-report.md  architecture.md  attention_comparison.md  cloud.md  configuration.md  data.md  debugging-modal.md  experiments.md  extending.md  get-started.md  how-to-run-experiments.md  index.md  logging.md  models.md  performance-toggles.md  slurm.md
tmgg/eigenstructure_results_full/: all_runs.parquet  analysis_summary.md  architecture_comparison.md  compact_nested_breakdown.md  experiment_breakdown.md  full_nested_breakdown.md  graph_denoise_team_runs.json  importance.csv  model_dataset_table.md  seed_averaged_summary.csv  semantic_analysis_report.md  unified_architecture_comparison.md  wandb_all_runs.json  wandb_export.json
tmgg/scripts/: EXACT_REPLICATION_README.md  README.md  analyze_experiments.py  analyze_grid_search.py  analyze_wandb_runs.py  compare_checkpoints.py  compute_mmd_baselines.py  debug_constant_noise.py  evaluate_all_digress.zsh  experiment_breakdown.py  export_via_mcp.py  fetch_wandb_runs.py  plot_phase4_figures.py  plot_phase4_sbm_illustration.py  render_phase4_spec_pdf.sh  replicate_denoising_experiments.sh  replicate_denoising_scripts_exact.sh  replicate_notebook_exact.sh  replicate_notebook_experiments.sh  run-digress-repro-modal.zsh  run_digress_comparison.zsh  run_diversity_sweep.py  run_grid_search.sh  run_phase4_eigenvalue_study.py  sanity_check_experiments.sh  sbm_repro_report.py  semantic_analysis.py  test_legacy_compatibility.sh  test_noise_generators.sh  tmgg_train_attention.sh  tmgg_train_gnn.sh  train_attention.sh  train_gnn.sh  train_hybrid.sh  unified_arch_comparison.py  validate_discrete_diffusion.py  validate_replication.sh
tmgg/site/: 404.html  index.html  search.json
tmgg/tensorboard-tools/: pyproject.toml
tmgg/tests/: __init__.py  conftest.py  experiment_matrix_utils.py  integration_utils.py  test_audit_fixes.py  test_baseline_runner.py  test_batch_types.py  test_beta_schedule_edge_classes.py  test_cli_surface_integration.py  test_cloud_factory.py  test_cloud_runners.py  test_config_composition.py  test_config_consistency.py  test_data_generation.py  test_data_split_reproducibility.py  test_datamodule_contracts.py  test_digress_checkpoint_compat.py  test_digress_noise.py  test_domain_transforms.py  test_edge_flip_rename.py  test_experiment_cartesian_matrix.py  test_experiment_coverage_matrix.py  test_gaussian_noise_symmetry.py  test_generative_integration.py  test_hydra_launcher.py  test_integration.py  test_legacy_networkx_data_configs.py  test_math_fixes.py  test_model_type_validation.py  test_param_wiring.py  test_parity_config_pins.py  test_pearl_asymmetric_guard.py  test_refactoring_regression.py  test_runner_integration.py  test_sbm_config_keys.py  test_sbm_naming_consistency.py  test_scheduler_interval.py  test_shared_sampling.py  test_single_graph_datasets.py  test_slurm_runner.py  (+2 more)
tmgg/wandb-tools/: README.md  SKILL.md  aggregate_runs.py  analyze_runs.py  export_runs.py  list_entities.py  pyproject.toml  test_wandb_parsing.py
(+5267 files in other folders)
