[project]
name = "tmgg-modal"
version = "0.1.0"
description = "Modal cloud execution for TMGG spectral denoising experiments"
authors = [{ name = "Igor Krawczuk", email = "igor@adaptyvbio.com" }]
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64.0",
    "boto3>=1.26.0",
    "omegaconf>=2.3.0",
    # tmgg is installed from local path during image build
]

[project.scripts]
tmgg-modal-stage1 = "scripts.run_stage1:main"
tmgg-modal-stage2 = "scripts.run_stage2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmgg_modal", "scripts"]

[tool.uv]
# Local dependency for development
dev-dependencies = [
    "pytest>=8.0.0",
]
sources = { tmgg = { path = "../tmgg", editable = true } }

[dependency-groups]
dev = [
    "tmgg",
]
